--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
             </div>
         </div>
     </section>
-
+    <div class="container skills-container" id="skills">
+        <p class="skills-img-text">Skills</p>
+        <img class="laptop-web" src="img/web-apps-laptop.png" alt="laptop" data-aos="zoom-in" data-aos-delay="500">
+    </div>
     <!-- EXPIRIENCE -->
 
     <section class="expirience-section" id="skills">
@@ -109,10 +112,9 @@
             <div class="expiriens-wrapper">
 
                 <div class="expirience-container">
-
-                    <h3 class="expirience-title">My Coding Skills & Experience</h3>
-
+                    <h3 class="expirience-title">My Coding Skills & <br> Experience</h3>
                     <div class="expirience-skill">
+
                         <div class="expirience-dots" data-aos="fade-up" data-aos-delay="500">
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
@@ -120,7 +122,6 @@
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <p class="expirience-text">Html</p>
-
                         </div>
                         <div class="expirience-dots" data-aos="fade-up" data-aos-delay="600">
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
@@ -129,7 +130,6 @@
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <p class="expirience-text">CSS</p>
-
                         </div>
                         <div class="expirience-dots" data-aos="fade-up" data-aos-delay="700">
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
@@ -138,7 +138,6 @@
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <i class="expirience-dots-items far fa-circle"></i>
                             <p class="expirience-text">JavaScript</p>
-
                         </div>
                         <div class="expirience-dots" data-aos="fade-up" data-aos-delay="800">
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
@@ -147,7 +146,6 @@
                             <i class="expirience-dots-items far fa-circle"></i>
                             <i class="expirience-dots-items far fa-circle"></i>
                             <p class="expirience-text">React</p>
-
                         </div>
                         <div class="expirience-dots" data-aos="fade-up" data-aos-delay="900">
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
@@ -156,7 +154,6 @@
                             <i class="expirience-dots-items far fa-circle"></i>
                             <i class="expirience-dots-items far fa-circle"></i>
                             <p class="expirience-text">Node</p>
-
                         </div>
                         <div class="expirience-dots" data-aos="fade-up" data-aos-delay="1000">
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
@@ -165,7 +162,28 @@
                             <i class="expirience-dots-items far fa-circle"></i>
                             <i class="expirience-dots-items far fa-circle"></i>
                             <p class="expirience-text">React Native</p>
-
+                        </div>
+                    </div>
+                </div>
+                <!-- soft skills  -->
+                <div class="expirience-container">
+                    <h3 class="expirience-title">Soft Skills</h3>
+                    <div class="expirience-soft-skill">
+                        <div class="expirience-dots" data-aos="fade-up" data-aos-delay="500">
+                            <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
+                            <p class="expirience-text">Scrum</p>
+                        </div>
+                        <div class="expirience-dots" data-aos="fade-up" data-aos-delay="600">
+                            <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
+                            <p class="expirience-text">Agile</p>
+                        </div>
+                        <div class="expirience-dots" data-aos="fade-up" data-aos-delay="700">
+                            <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
+                            <p class="expirience-text">GTD</p>
+                        </div>
+                        <div class="expirience-dots" data-aos="fade-up" data-aos-delay="800">
+                            <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
+                            <p class="expirience-text">Teamwork</p>
                         </div>
                     </div>
                 </div>
