--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
 
 
                 <div class="education-list" data-aos="fade-left" data-aos-delay="800">
-                    <a href="https://levelup.ua/" class="educatoin-link">LevelUp </a><br>
+                    <a href="https://levelup.ua/" target="_blank" class="educatoin-link">LevelUp </a><br>
                     <p class="discription-text">IT specialists training center</p>
                 </div>
                 <div class="education-list" data-aos="fade-left" data-aos-delay="850">
-                    <a href="https://itea.ua/" class="educatoin-link">ITEA </a><br>
+                    <a href="https://itea.ua/" target="_blank" class="educatoin-link">ITEA </a><br>
                     <p class="discription-text">International educational company for the comprehensive training and development of IT industry specialists</p>
                 </div>
                 <div class="education-list" data-aos="fade-left" data-aos-delay="900">
-                    <a href="https://goit.ua/" class="educatoin-link">GoIT </a><br>
+                    <a href="https://goit.ua/" target="_blank" class="educatoin-link">GoIT </a><br>
                     <p class="discription-text">Frontend development courses</p>
                 </div>
                 <div class="education-list" data-aos="fade-left" data-aos-delay="1000">
-                    <a href="https://www.softserveinc.com/uk-ua" class="educatoin-link">SoftServe </a><br>
+                    <a href="https://www.softserveinc.com/uk-ua" target="_blank" class="educatoin-link">SoftServe </a><br>
                     <p class="discription-text">Leading IT consulting and digital services company</p>
                 </div>
 
@@ -201,18 +201,25 @@
                     <h3 class="footer-name">Alexey Katrenko</h3>
                     <p class="footer-profession">Frontend Developer</p>
                 </div>
+                <div class="footer-contact-wrapper">
+                    <div class="footer-my-contacts-icon">
+                        <div class="phone"><i class="fas fa-mobile-alt"></i></div>
+                        <div class="mail"><i class="fas fa-envelope-square"></i></div>
+                    </div>
 
-                <div class="footer-my-contacts">
-                    <a class="footer-tel" href="tel:0636077777">+380 63 607 77 77</a>
-                    <a class="footer-email" href="mailto:tolstuy.paren@gmail.com">tolstuy.paren@gmail.com</a>
+                    <div class="footer-my-contacts">
+
+                        <a class="footer-tel" href="tel:0665160363">+380 66 516 03 63</a>
+                        <a class="footer-email" href="mailto:tolstuy.paren@gmail.com">tolstuy.paren@gmail.com</a>
+                    </div>
                 </div>
             </div>
-
             <div class="icons">
-                <a href="https://github.com/TolstuyParenb" class="socion-link"><i class="fab fa-github icon-link"></i></a>
-                <a href="https://www.linkedin.com/" class="socion-link"><i class="fab fa-linkedin icon-link"></i></a>
-                <a href="https://www.facebook.com/" class="socion-link"><i class="fab fa-facebook-square icon-link"></i></a>
-                <a href="https://www.instagram.com/" class="socion-link"><i class="fab fa-instagram icon-link"></i></a>
+                <a href="" target="_blank" class="socion-link"><i class="fab fa-telegram icon-link"></i></i></a>
+                <a href="https://github.com/TolstuyParenb" target="_blank" class="socion-link"><i class="fab fa-github icon-link"></i></a>
+                <a href="https://www.linkedin.com/" target="_blank" class="socion-link"><i class="fab fa-linkedin icon-link"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" class="socion-link"><i class="fab fa-facebook-square icon-link"></i></a>
+                <a href="https://www.instagram.com/" target="_blank" class="socion-link"><i class="fab fa-instagram icon-link"></i></a>
 
             </div>
         </div>
