--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="menu-item " href="#footer-contacts">CONTACTS</a>
                 </div>
                 <div class="download-btm">
-                    <a href=" " class="download-icon"><i class="fas fa-download "></i></a>
+                    <a href="https://drive.google.com/drive/u/2/folders/1lO46I3iXHOnzIPlldCIz-29AfYIEVVuM" target="_blank" class="download-icon"><i class="fas fa-download "></i></a>
                 </div>
             </nav>
             <div class="front-page-main-info">
@@ -121,7 +121,7 @@
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
-                            <p class="expirience-text">Html</p>
+                            <p class="expirience-text">Html5</p>
                         </div>
                         <div class="expirience-dots" data-aos="fade-up" data-aos-delay="600">
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
@@ -129,7 +129,7 @@
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
-                            <p class="expirience-text">CSS</p>
+                            <p class="expirience-text">CSS3</p>
                         </div>
                         <div class="expirience-dots" data-aos="fade-up" data-aos-delay="700">
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
@@ -153,7 +153,7 @@
                             <i class="expirience-dots-items far fa-circle"></i>
                             <i class="expirience-dots-items far fa-circle"></i>
                             <i class="expirience-dots-items far fa-circle"></i>
-                            <p class="expirience-text">Node</p>
+                            <p class="expirience-text">Node.js</p>
                         </div>
                         <div class="expirience-dots" data-aos="fade-up" data-aos-delay="1000">
                             <i class="expirience-dots-items expirience-dots-item-accent far fa-circle"></i>
@@ -210,7 +210,7 @@
                     <div class="footer-my-contacts">
 
                         <a class="footer-tel" href="tel:0665160363">+380 66 516 03 63</a>
-                        <a class="footer-email" href="mailto:tolstuy.paren@gmail.com">tolstuy.paren@gmail.com</a>
+                        <a class="footer-email" href="mailto:Katrenkoalex1989@gmail.com">Katrenkoalex1989@gmail.com</a>
                     </div>
                 </div>
             </div>
