--- a/index.html
+++ b/index.html
@@ -16,60 +16,61 @@
 </head>
 
 <body>
-    <section class="front-page">
-        <div class="container">
-            <!-- NAV -->
-            <nav class="navigation">
-                <a href=""><img src="img/Logo.png" alt="logo_Resume" class="logo-link"></a>
-                <div class="menu-items">
-                    <a class="menu-item" href="#about">ABOUT</a>
-                    <a class="menu-item " href="#education">EDUCATION</a>
-                    <a class="menu-item " href="#skills">SKILLS</a>
-                    <a class="menu-item " href="#footer-contacts">CONTACTS</a>
-                </div>
-                <div class="download-btm">
-                    <a href="https://drive.google.com/drive/u/2/folders/1lO46I3iXHOnzIPlldCIz-29AfYIEVVuM" target="_blank" class="download-icon"><i class="fas fa-download "></i></a>
-                </div>
-            </nav>
-            <div class="front-page-main-info">
-                <img src="img/photo 2.png" class="my-photo" alt="my photo">
-
-                <h1 class="front-page-my-name">[Alexey Katrenko]</h1>
-                <h2 class="front-page-profesional">
-                    <div>
-                        <span class="front-page-part-1">{Frontend}</span>
-                        <span class="front-page-part-2">_DEVELOPER</span>
+        <section class="front-page">
+            <div class="container">
+                <!-- NAV -->
+                <nav class="navigation">
+                    <a href=""><img src="img/Logo.png" alt="logo_Resume" class="logo-link"></a>
+                    <div class="menu-items">
+                        <a class="menu-item" href="#about">ABOUT</a>
+                        <a class="menu-item " href="#education">EDUCATION</a>
+                        <a class="menu-item " href="#skills">SKILLS</a>
+                        <a class="menu-item " href="#footer-contacts">CONTACTS</a>
                     </div>
-                </h2>
-            </div>
-            <div class="front-page-descriptoin">
-                <p class="front-page-descriptoin-text">/ Using HTML, CSS, JavaScript, React Native and Node.js I help to build websites, small and medium web apps</p>
-                <div>
-                    <img src="img/laptop.svg" alt="laptop" class="front-page-laptop" data-aos="fade-left" data-aos-delay="500">
+                    <div class="download-btm">
+                        <a href="https://drive.google.com/drive/u/2/folders/1lO46I3iXHOnzIPlldCIz-29AfYIEVVuM" target="_blank" class="download-icon"><i class="fas fa-download "></i></a>
+                    </div>
+                </nav>
+                <div class="front-page-main-info">
+                    <img src="img/photo 2.png" class="my-photo" alt="my photo">
+
+                    <h1 class="front-page-my-name">[Alexey Katrenko]</h1>
+                    <h2 class="front-page-profesional">
+                        <div>
+                            <span class="front-page-part-1">{Frontend}</span>
+                            <span class="front-page-part-2">_DEVELOPER</span>
+                        </div>
+                    </h2>
                 </div>
-            </div>
-    </section>
+                <div class="front-page-descriptoin">
+                    <p class="front-page-descriptoin-text">/ Using HTML, CSS, JavaScript, React Native and Node.js I help to build websites, small and medium web apps</p>
+                    <div>
+                        <img src="img/laptop.svg" alt="laptop" class="front-page-laptop" data-aos="fade-left" data-aos-delay="500">
+                    </div>
+                </div>
+        </section>
+
     <!-- ABOUT PAGE -->
+
     <section class="about" id="about">
         <div class="container container-left">
             <div class="about-content-wrapper">
                 <h3 class="section-title about-title" data-aos="fade-right" data-aos-delay="500">I code things from scratch_</h3>
-
-                <div class="about-img-container">
-                    <p class="about-img-text">
-                        WEB
-
-                    </p>
-                </div>
-            </div>
+           
             <p class="about-text">
                 / I will help you to create a high-performance Landing Page, functional corporate website for your business, interactive web app for SaaS, startup, or other services.
             </p>
             <p class="about-text">
                 / My specialization is front-end development — client side of the web. But I also have full-stack developer experience.
             </p>
+ </div>
+            <div class="about-img-container">
+                <p class="about-img-text">
+                    WEB
+                </p>
+            </div>
         </div>
-        </div>
+        
     </section>
 
     <!-- EDUCATION -->
@@ -215,7 +216,7 @@
                 </div>
             </div>
             <div class="icons">
-                <a href="" target="_blank" class="socion-link"><i class="fab fa-telegram icon-link"></i></i></a>
+                <a href="https://xn--80affa3aj0al.xn--80asehdb/" target="_blank" class="socion-link"><i class="fab fa-telegram icon-link"></i></a>
                 <a href="https://github.com/TolstuyParenb" target="_blank" class="socion-link"><i class="fab fa-github icon-link"></i></a>
                 <a href="https://www.linkedin.com/" target="_blank" class="socion-link"><i class="fab fa-linkedin icon-link"></i></a>
                 <a href="https://www.facebook.com/" target="_blank" class="socion-link"><i class="fab fa-facebook-square icon-link"></i></a>
