--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <!-- ABOUT PAGE -->
 
-    <section class=" about" id="about">
+    <section class=" about container" id="about">
         <div class=" container-left">
             <div class="about-content-wrapper">
                 <h3 class="section-title about-title" data-aos="fade-right" data-aos-delay="500">I code things from scratch_</h3>
