--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 </div>
             </div>
             <div class="icons">
-                <a href="tg://resolve?domain=@Tolstuy_parenb" target="_blank" class="socion-link"><i class="fab fa-telegram icon-link"></i></a>
+                <a href="tg://resolve?domain=Tolstuy_parenb" target="_blank" class="socion-link"><i class="fab fa-telegram icon-link"></i></a>
                 <a href="https://github.com/TolstuyParenb" target="_blank" class="socion-link"><i class="fab fa-github icon-link"></i></a>
                 <a href="https://www.linkedin.com/" target="_blank" class="socion-link"><i class="fab fa-linkedin icon-link"></i></a>
                 <a href="https://www.facebook.com/" target="_blank" class="socion-link"><i class="fab fa-facebook-square icon-link"></i></a>
