--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <a href="https://github.com/TolstuyParenb" target="_blank" class="socion-link"><i class="fab fa-github icon-link"></i></a>
                 <a href="https://www.linkedin.com/" target="_blank" class="socion-link"><i class="fab fa-linkedin icon-link"></i></a>
                 <a href="https://www.facebook.com/" target="_blank" class="socion-link"><i class="fab fa-facebook-square icon-link"></i></a>
-                <a href="https://www.instagram.com/" target="_blank" class="socion-link"><i class="fab fa-instagram icon-link"></i></a>
+                <a href="https://www.instagram.com/alex.katrenko" target="_blank" class="socion-link"><i class="fab fa-instagram icon-link"></i></a>
 
             </div>
         </div>
